08-infra-k3s/manifests/service-definitions/toolbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toolbox
  namespace: default
  labels:
    app: toolbox
spec:
  selector:
    app: toolbox
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
