08-infra-k3s/manifests/service-definitions/toolbox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: toolbox
  namespace: default
  labels:
    app: toolbox
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`toolbox.aldof.duckdns.org`)
    kind: Rule
    services:
    - name: toolbox
      port: 3000
  tls:
    secretName: toolbox-tls-secret
